--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
       - ME_CONFIG_BASICAUTH_USERNAME=admin
       - ME_CONFIG_BASICAUTH_PASSWORD=admin123
     volumes:
-      - mongodb-data
+      - mongodb-data:/data/db
     depends_on:
       - mongodb
     networks:
