--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,48 +1,18 @@
 version: "3.7"
 
 services:
-  mongodb:
-    image: mongo
-    container_name: mongodb
+  couchdb-server:
+    image: couchdb:3.1.1
+    container_name: couchdb-server
     environment:
-      - MONGO_INITDB_ROOT_USERNAME=root
-      - MONGO_INITDB_ROOT_PASSWORD=pass12345
+      - COUCHDB_USER=root
+      - COUCHDB_PASSWORD=pass12345
     volumes:
-      - mongodb-data:/data/db
+      - couchdb-data:/opt/couchdb/data
     networks:
-      - mongodb_network
+      - couchdb_network
     ports:
-      - 27017:27017
-    healthcheck:
-      test: echo 'db.runCommand("ping").ok' | mongo 10.10.10.60:27017/test --quiet
-      interval: 30s
-      timeout: 10s
-      retries: 3
-    restart: unless-stopped
-
-  mongo-express:
-    image: mongo-express
-    container_name: mongo-express
-    environment:
-      - ME_CONFIG_MONGODB_SERVER=mongodb
-      - ME_CONFIG_MONGODB_ENABLE_ADMIN=true
-      - ME_CONFIG_MONGODB_ADMINUSERNAME=root
-      - ME_CONFIG_MONGODB_ADMINPASSWORD=pass12345
-      - ME_CONFIG_BASICAUTH_USERNAME=admin
-      - ME_CONFIG_BASICAUTH_PASSWORD=admin123
-    volumes:
-      - mongodb-data:/data/db
-    depends_on:
-      - mongodb
-    networks:
-      - mongodb_network
-    ports:
-      - 8081:8081
-    healthcheck:
-      test: wget --quiet --tries=3 --spider http://admin:admin123@10.10.10.60:8081 || exit 1
-      interval: 30s
-      timeout: 10s
-      retries: 3
+      - 5984:5984
     restart: unless-stopped
 
   smt-dev:
@@ -54,7 +24,7 @@ services:
       - ".:/app"
       - "/app/node_modules"
     depends_on:
-      - mongodb
+      - couchdb-server
     ports:
       - 3001:3000
     environment:
@@ -62,8 +32,8 @@ services:
     env_file: .env.local
 
 volumes:
-  mongodb-data:
-    name: mongodb-data
+  couchdb-data:
+    name: couchdb-data
 networks:
-  mongodb_network:
-    name: mongodb_network
+  couchdb_network:
+    name: couchdb_network
