--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "redux-persist-pouchdb": "^0.2.1",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
+    "sass": "^1.34.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
