--- a/client/Dockerfile.dev
+++ b/client/Dockerfile.dev
@@ -1,5 +1,5 @@
 # pull official base image
-FROM node:16.3-alpine
+FROM node:alpine
 
 # set working directory
 WORKDIR /app
@@ -8,8 +8,7 @@ WORKDIR /app
 ENV PATH /app/node_modules/.bin:$PATH
 
 # install app dependencies
-COPY package.json ./
-COPY package-lock.json ./
+COPY package.json package-lock.json ./
 RUN npm install --silent
 RUN npm install react-scripts@3.4.1 -g --silent
 
