--- a/client/Dockerfile.prod
+++ b/client/Dockerfile.prod
@@ -1,5 +1,5 @@
 # build environment
-FROM node:16.3-alpine as builder
+FROM node:alpine as builder
 WORKDIR /app
 ENV PATH /app/node_modules/.bin:$PATH
 COPY package.json ./
