--- a/infra/k8s-prod/ingress-srv.yaml
+++ b/infra/k8s-prod/ingress-srv.yaml
@@ -9,7 +9,7 @@ metadata:
     name: ingress-service
 spec:
   rules:
-    - host: ticketing.delwinbest.com
+    - host: sprintsummarytool.delwinbest.com
       http:
         paths:
           - path: '/?(.*)'
