add auth module

--- a/infra/k8s-dev/ingress-srv.yaml
+++ b/infra/k8s-dev/ingress-srv.yaml
@@ -10,6 +10,7 @@ metadata:
 spec:
   rules:
     - http:
+        # host: sprintsummarytool.delwinbest.com
         paths:
           - path: '/?(.*)'
             pathType: Prefix
@@ -23,5 +24,12 @@ spec:
             backend:
               service:
                 name: sprints-srv
+                port:
+                  number: 3000
+          - path: '/api/users/?(.*)'
+            pathType: Prefix
+            backend:
+              service:
+                name: auth-srv
                 port:
                   number: 3000
