--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -9,6 +9,14 @@ build:
   local:
     push: false
   artifacts:
+    - image: delwinrbest/smt_client
+      context: client
+      docker:
+        dockerfile: Dockerfile.dev
+      sync:
+        manual:
+          - src: '**/*.js'
+            dest: .
     - image: delwinrbest/smt_sprints
       context: sprints
       docker:
@@ -17,11 +25,11 @@ build:
         manual:
           - src: ./src/**/*.ts
             dest: .
-    - image: delwinrbest/smt_client
-      context: client
+    - image: delwinrbest/smt_auth
+      context: auth
       docker:
-        dockerfile: Dockerfile.dev
+        dockerfile: Dockerfile
       sync:
         manual:
-          - src: '**/*.js'
+          - src: ./src/**/*.ts
             dest: .
