--- a/sprints/package.json
+++ b/sprints/package.json
@@ -19,7 +19,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@sprintsummarytool/common": "^1.0.0",
+    "@sprintsummarytool/common": "^1.0.2",
     "@types/express": "^4.17.12",
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
@@ -27,6 +27,7 @@
     "express-validator": "^6.12.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "5.13.4",
+    "mongoose-update-if-current": "^1.4.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.3.5"
   },
