--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -33,3 +33,11 @@ build:
         manual:
           - src: ./src/**/*.ts
             dest: .
+    - image: delwinrbest/smt_teams
+      context: teams
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: ./src/**/*.ts
+            dest: .
