--- a/infra/k8s/teams-dep.yaml
+++ b/infra/k8s/teams-dep.yaml
@@ -17,7 +17,7 @@ spec:
           image: delwinrbest/smt_teams
           env:
             - name: MONGO_URI
-              value: 'mongodb://sprints-mongo-srv:27017/sprints'
+              value: 'mongodb://teams-mongo-srv:27017/teams'
             - name: NATS_URL
               value: 'http://nats-srv:4222'
             - name: NATS_CLUSTER_ID
