update user with teams

--- a/infra/k8s/nats-deply.yaml
+++ b/infra/k8s/nats-deply.yaml
@@ -28,7 +28,7 @@ spec:
             '-SD', 
             '-DV',
             '-cid', 
-            'sprints'
+            'sprintstool'
           ]
           ports:
             - containerPort: 4222
