--- a/infra/k8s/auth-depl.yaml
+++ b/infra/k8s/auth-depl.yaml
@@ -17,11 +17,11 @@ spec:
           image: delwinrbest/smt_auth
           env:
             - name: MONGO_URI
-              value: 'mongodb://sprints-mongo-srv:27017/sprints'
+              value: 'mongodb://auth-mongo-srv:27017/auth'
             - name: NATS_URL
               value: 'http://nats-srv:4222'
             - name: NATS_CLUSTER_ID
-              value: sprints
+              value: sprintstool
             - name: NATS_CLIENT_ID
               valueFrom:
                 fieldRef:
@@ -44,7 +44,7 @@ spec:
               httpHeaders:
                 - name: Content-Type
                   value: application/json
-            initialDelaySeconds: 120
+            initialDelaySeconds: 30
             periodSeconds: 3
 ---
 apiVersion: v1
