rename auth service as users service

--- a/infra/k8s-dev/ingress-srv.yaml
+++ b/infra/k8s-dev/ingress-srv.yaml
@@ -30,7 +30,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: auth-srv
+                name: users-srv
                 port:
                   number: 3000
           - path: '/api/teams/?(.*)'
