--- a/infra/k8s/auth-depl.yaml
+++ b/infra/k8s/auth-depl.yaml
@@ -1,23 +1,23 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: auth-depl
+  name: users-depl
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: auth
+      app: users
   template:
     metadata:
       labels:
-        app: auth
+        app: users
     spec:
       containers:
-        - name: auth
-          image: delwinrbest/smt_auth
+        - name: users
+          image: delwinrbest/smt_users
           env:
             - name: MONGO_URI
-              value: 'mongodb://auth-mongo-srv:27017/auth'
+              value: 'mongodb://users-mongo-srv:27017/users'
             - name: NATS_URL
               value: 'http://nats-srv:4222'
             - name: NATS_CLUSTER_ID
@@ -50,12 +50,12 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: auth-srv
+  name: users-srv
 spec:
   selector:
-    app: auth
+    app: users
   ports:
-    - name: auth
+    - name: users
       protocol: TCP
       port: 3000
       targetPort: 3000
