--- a/infra/k8s/auth-mongo-depl.yaml
+++ b/infra/k8s/auth-mongo-depl.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: auth-mongo-depl
+  name: users-mongo-depl
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: auth-mongo
+      app: users-mongo
   template:
     metadata:
       labels:
-        app: auth-mongo
+        app: users-mongo
     spec:
       containers:
-        - name: auth-mongo
+        - name: users-mongo
           image: mongo
           # resources:
           #   limits:
@@ -25,10 +25,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: auth-mongo-srv
+  name: users-mongo-srv
 spec:
   selector:
-    app: auth-mongo
+    app: users-mongo
   ports:
     - name: db
       protocol: TCP
