--- a/.github/workflows/tests-teams.yaml
+++ b/.github/workflows/tests-teams.yaml
@@ -4,6 +4,9 @@ on:
   pull_request:
     paths:
       - 'teams/**'
+  push:
+    paths:
+      - 'teams/**'
 jobs:
   build:
     runs-on: ubuntu-latest
