--- a/.github/workflows/tests-sprints.yaml
+++ b/.github/workflows/tests-sprints.yaml
@@ -10,5 +10,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - run: cd sprints && npm install && npm run test:ci
+      - name: Checkout Code
+        uses: actions/checkout@v2
+      - name: Run Tests
+        run: cd sprints && npm install && npm run test:ci
