--- a/.github/workflows/tests-teams.yaml
+++ b/.github/workflows/tests-teams.yaml
@@ -11,4 +11,4 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v2
       - name: Run Tests
-        run: cd sprints && npm install && npm run test:ci
+        run: cd teams && npm install && npm run test:ci
