--- a/.github/workflows/tests-users.yaml
+++ b/.github/workflows/tests-users.yaml
@@ -1,14 +1,14 @@
 name: tests-users
 
 on:
-  push:
-    branches:
-      - master
+  pull_request:
     paths:
       - 'users/**'
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - run: cd users && npm install && npm run test:ci
+      - name: Checkout Code
+        uses: actions/checkout@v2
+      - name: Run Tests
+        run: cd users && npm install && npm run test:ci
