--- a/client.old/Dockerfile.dev
+++ b/client.old/Dockerfile.dev
@@ -8,11 +8,12 @@ WORKDIR /app
 ENV PATH /app/node_modules/.bin:$PATH
 
 # install app dependencies
-COPY package.json yarn.lock ./
-RUN yarn install --silent
+COPY package.json package-lock.json ./
+RUN npm install --silent
+RUN npm install react-scripts@3.4.1 -g --silent
 
 # add app
 COPY . ./
 
 # start app
-CMD ["yarn", "start"]
+CMD ["npm", "start"]
