--- a/client/Dockerfile.prod
+++ b/client/Dockerfile.prod
@@ -3,9 +3,9 @@ FROM node:alpine as builder
 WORKDIR /app
 ENV PATH /app/node_modules/.bin:$PATH
 COPY package.json yarn.lock ./
-RUN yarn ci --silent
+RUN npm ci --silent
 COPY . ./
-RUN yarn run build
+RUN npm run build
 
 # production environment
 FROM nginx:stable-alpine
