--- a/client/package.json
+++ b/client/package.json
@@ -8,10 +8,13 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "@types/react": "^16.0.0",
+    "@types/react-dom": "^16.0.0",
+    "bootstrap": "5.0.2",
+    "react": "16.14.0",
+    "react-bootstrap": "^2.0.0-beta.4",
+    "react-bootstrap-icons": "^1.5.0",
+    "react-dom": "^16.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
@@ -39,5 +42,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/enzyme": "^3.10.9",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "enzyme-to-json": "^3.6.2",
+    "react-test-renderer": "^16.13.1"
   }
 }
