--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@material-ui/core": "4.11.4",
     "@material-ui/icons": "4.11.2",
+    "@reduxjs/toolkit": "^1.6.1",
+    "@types/react-redux": "^7.1.18",
     "chartist": "0.10.1",
     "classnames": "2.3.1",
     "match-sorter": "6.3.0",
@@ -19,6 +21,7 @@
     "react-datetime": "3.0.4",
     "react-dom": "17.0.2",
     "react-jvectormap": "0.0.16",
+    "react-redux": "^7.2.4",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
     "react-swipeable-views": "0.13.9",
