--- a/sprints/package.json
+++ b/sprints/package.json
@@ -33,9 +33,11 @@
   },
   "devDependencies": {
     "@types/cookie-session": "^2.0.42",
+    "@types/cors": "^2.8.12",
     "@types/jest": "^26.0.24",
     "@types/jsonwebtoken": "^8.5.3",
     "@types/supertest": "^2.0.11",
+    "cors": "^2.8.5",
     "jest": "^27.0.6",
     "mongodb-memory-server": "^7.2.0",
     "supertest": "^6.1.3",
