--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-chartist": "0.14.4",
     "react-datetime": "3.0.4",
     "react-dom": "17.0.2",
+    "react-google-login": "^5.2.2",
     "react-jvectormap": "0.0.16",
     "react-redux": "^7.2.4",
     "react-router-dom": "5.2.0",
