--- a/infra/k8s/auth-depl.yaml
+++ b/infra/k8s/auth-depl.yaml
@@ -31,6 +31,11 @@ spec:
                 secretKeyRef:
                   name: jwt-secret
                   key: JWT_KEY
+            - name: GOOGLE_OAUTH_CLIENTID
+              valueFrom:
+                secretKeyRef:
+                  name: google-oauth-clientid
+                  key: GOOGLE_OAUTH_CLIENTID
           # resources:
           #   limits:
           #     memory: '128Mi'
