--- a/.github/workflows/deploy-manifests.yaml
+++ b/.github/workflows/deploy-manifests.yaml
@@ -4,8 +4,8 @@ on:
   pull_request:
     branches:
       - master
-    paths:
-      - 'infra/**'
+    # paths:
+    #   - 'infra/**'
 
 env:
   AWS_DEFAULT_REGION: ap-northeast-1
