--- a/.github/workflows/tests-sprints.yaml
+++ b/.github/workflows/tests-sprints.yaml
@@ -2,8 +2,8 @@ name: tests-sprints
 
 on:
   pull_request:
-    paths:
-      - 'sprints/**'
+    # paths:
+    #   - 'sprints/**'
 jobs:
   build:
     runs-on: ubuntu-latest
