--- a/.github/workflows/tests-users.yaml
+++ b/.github/workflows/tests-users.yaml
@@ -2,8 +2,8 @@ name: tests-users
 
 on:
   pull_request:
-    paths:
-      - 'users/**'
+    # paths:
+    #   - 'users/**'
 jobs:
   build:
     runs-on: ubuntu-latest
