--- a/.github/workflows/deploy-sprints.yaml
+++ b/.github/workflows/deploy-sprints.yaml
@@ -1,11 +1,17 @@
 name: deploy-sprints
 
 on:
+  # Triggers the workflow on push or pull request events but only for the master branch
+  push:
+    branches: [master]
+    paths:
+      - 'sprints/**'
   pull_request:
-    branches:
-      - master
-    # paths:
-    #   - 'sprints/**'
+    branches: [master]
+    paths:
+      - 'sprints/**'
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 env:
   AWS_DEFAULT_REGION: ap-northeast-1
   K8S_CLUSER_NAME: sprint-planning-tool
