--- a/.github/workflows/tests-sprints.yaml
+++ b/.github/workflows/tests-sprints.yaml
@@ -1,9 +1,17 @@
 name: tests-sprints
 
 on:
+  # Triggers the workflow on push or pull request events but only for the master branch
+  push:
+    branches: [master]
+    paths:
+      - 'sprints/**'
   pull_request:
-    # paths:
-    #   - 'sprints/**'
+    branches: [master]
+    paths:
+      - 'sprints/**'
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 jobs:
   build:
     runs-on: ubuntu-latest
