--- a/client/Dockerfile.prod
+++ b/client/Dockerfile.prod
@@ -1,14 +1,11 @@
-# build environment
-FROM node:alpine as builder
-WORKDIR /app
-ENV PATH /app/node_modules/.bin:$PATH
+FROM node:alpine as build-deps
+WORKDIR /usr/src/app
 COPY package.json yarn.lock ./
-RUN yarn install --production=true --silent --non-interactive
+RUN yarn
 COPY . ./
-RUN yarn run build
+RUN yarn build
 
-# production environment
 FROM nginx:stable-alpine
-COPY --from=builder /app/build /usr/share/nginx/html
+COPY --from=build-deps /usr/src/app/build /usr/share/nginx/html
 EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]  
+CMD ["nginx", "-g", "daemon off;"]
