--- a/infra/k8s-prod/ingress-srv.yaml
+++ b/infra/k8s-prod/ingress-srv.yaml
@@ -9,7 +9,7 @@ metadata:
     name: ingress-service
 spec:
   rules:
-    - host: sprintsummarytool.delwinbest.com
+    - host: sprintplanner.delwinbest.com
       http:
         paths:
           - path: '/?(.*)'
@@ -19,3 +19,24 @@ spec:
                 name: client-srv
                 port:
                   number: 80
+          - path: '/api/sprints/?(.*)'
+            pathType: Prefix
+            backend:
+              service:
+                name: sprints-srv
+                port:
+                  number: 3000
+          - path: '/api/users/?(.*)'
+            pathType: Prefix
+            backend:
+              service:
+                name: users-srv
+                port:
+                  number: 3000
+          - path: '/api/teams/?(.*)'
+            pathType: Prefix
+            backend:
+              service:
+                name: teams-srv
+                port:
+                  number: 3000
