--- a/client/Dockerfile.prod
+++ b/client/Dockerfile.prod
@@ -1,4 +1,7 @@
 FROM node:alpine as build-deps
+ARG REACT_APP_GOOGLE_OAUTH_CLIENTID
+ENV REACT_APP_GOOGLE_OAUTH_CLIENTID=$REACT_APP_GOOGLE_OAUTH_CLIENTID
+RUN echo $REACT_APP_GOOGLE_OAUTH_CLIENTID
 WORKDIR /usr/src/app
 COPY package.json yarn.lock ./
 RUN yarn
