--- a/client/Dockerfile.prod
+++ b/client/Dockerfile.prod
@@ -1,6 +1,6 @@
 FROM node:alpine as build-deps
 ARG REACT_APP_GOOGLE_OAUTH_CLIENTID
-ENV REACT_APP_GOOGLE_OAUTH_CLIENTID=265467486812-n9nmdcuf52s0321h854tl4dg7fksjrog.apps.googleusercontent.com
+ENV REACT_APP_GOOGLE_OAUTH_CLIENTID=$REACT_APP_GOOGLE_OAUTH_CLIENTID
 RUN echo $REACT_APP_GOOGLE_OAUTH_CLIENTID
 WORKDIR /usr/src/app
 COPY package.json yarn.lock ./
