--- a/.github/workflows/deploy-client.yaml
+++ b/.github/workflows/deploy-client.yaml
@@ -25,7 +25,7 @@ jobs:
         with:
           username: ${{secrets.DOCKER_USERNAME}}
           password: ${{secrets.DOCKER_TOKEN}}
-
+      - run: echo ${{ env.REACT_APP_GOOGLE_OAUTH_CLIENTID }}
       - name: Build Container Image
         run: cd client && docker build --build-arg REACT_APP_GOOGLE_OAUTH_CLIENTID=${{ env.REACT_APP_GOOGLE_OAUTH_CLIENTID }} -f  Dockerfile.prod -t delwinrbest/smt_client:prod .
 
