--- a/client/Dockerfile.prod
+++ b/client/Dockerfile.prod
@@ -5,7 +5,8 @@ WORKDIR /usr/src/app
 COPY package.json yarn.lock ./
 RUN yarn
 COPY . ./
-RUN echo $REACT_APP_GOOGLE_OAUTH_CLIENTID\ yarn build
+RUN echo $REACT_APP_GOOGLE_OAUTH_CLIENTID
+RUN yarn build
 
 FROM nginx:stable-alpine
 COPY --from=build-deps /usr/src/app/build /usr/share/nginx/html
