--- a/.github/workflows/deploy-client.yaml
+++ b/.github/workflows/deploy-client.yaml
@@ -25,12 +25,12 @@ jobs:
         with:
           username: ${{secrets.DOCKER_USERNAME}}
           password: ${{secrets.DOCKER_TOKEN}}
-      - run: echo ${{ env.REACT_APP_GOOGLE_OAUTH_CLIENTID }}
+
       - name: Build Container Image
-        run: cd client && docker build --build-arg REACT_APP_GOOGLE_OAUTH_CLIENTID=${{env.REACT_APP_GOOGLE_OAUTH_CLIENTID}} -f Dockerfile.prod -t delwinrbest/smt_client:prod .
+        run: cd client && docker build --build-arg REACT_APP_GOOGLE_OAUTH_CLIENTID=${{env.REACT_APP_GOOGLE_OAUTH_CLIENTID}} -f Dockerfile.prod -t delwinrbest/smt_client-prod:latest .
 
       - name: Push Image to Docker Hub
-        run: docker push delwinrbest/smt_client:prod
+        run: docker push delwinrbest/smt_client-prod:latest
       # - name: Login doctl with Digital Ocean
       #   uses: digitalocean/action-doctl@v2
       #   with:
