--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -9,7 +9,7 @@ build:
   local:
     push: false
   artifacts:
-    - image: delwinrbest/smt_client
+    - image: delwinrbest/smt_client-dev
       context: client
       docker:
         dockerfile: Dockerfile.dev
