--- a/.github/workflows/tests-teams.yaml
+++ b/.github/workflows/tests-teams.yaml
@@ -2,10 +2,10 @@ name: tests-teams
 
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
-  push:
-    branches: [master]
-    paths:
-      - 'teams/**'
+  # push:
+  #   branches: [master]
+  #   paths:
+  #     - 'teams/**'
   pull_request:
     branches: [master]
     paths:
