--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "4.11.4",
     "@material-ui/icons": "4.11.2",
     "@reduxjs/toolkit": "^1.6.1",
+    "@sprintsummarytool/common": "^1.0.24",
     "@types/react-redux": "^7.1.18",
     "chartist": "0.10.1",
     "classnames": "2.3.1",
