--- a/.github/workflows/tests-sprints.yaml
+++ b/.github/workflows/tests-sprints.yaml
@@ -10,6 +10,8 @@ on:
     branches: [master]
     paths:
       - 'sprints/**'
+      - 'users/**'
+      - 'teams/**'
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 jobs:
