--- a/.github/workflows/tests-teams.yaml
+++ b/.github/workflows/tests-teams.yaml
@@ -9,6 +9,8 @@ on:
   pull_request:
     branches: [master]
     paths:
+      - 'sprints/**'
+      - 'users/**'
       - 'teams/**'
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
