--- a/.github/workflows/tests-users.yaml
+++ b/.github/workflows/tests-users.yaml
@@ -9,7 +9,9 @@ on:
   pull_request:
     branches: [master]
     paths:
+      - 'sprints/**'
       - 'users/**'
+      - 'teams/**'
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 jobs:
