--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -9,14 +9,14 @@ build:
   local:
     push: false
   artifacts:
-    - image: delwinrbest/smt_client-dev
-      context: client
-      docker:
-        dockerfile: Dockerfile.dev
-      sync:
-        manual:
-          - src: './src/**/*.js'
-            dest: src/
+    # - image: delwinrbest/smt_client-dev
+    #   context: client
+    #   docker:
+    #     dockerfile: Dockerfile.dev
+    #   sync:
+    #     manual:
+    #       - src: './src/**/*.js'
+    #         dest: src/
     - image: delwinrbest/smt_sprints
       context: sprints
       docker:
